[oscarsamples] Add missing support for redhat-6.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10316 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 738b9b8cc246624b4522063b89d1076f0dd683b1

--- a/oscarsamples/Makefile
+++ b/oscarsamples/Makefile
@@ -20,7 +20,9 @@ FILES := debian-4-i386.rpmlist debian-4-x86_64.rpmlist \
 	rhel-3u2-i386.rpmlist rhel-3u2-ia64.rpmlist \
 	rhel-4-i386.rpmlist rhel-4-ia64.rpmlist rhel-4-x86_64.rpmlist \
 	rhel-5-i386.rpmlist rhel-5-x86_64.rpmlist \
+	rhel-6-i386.rpmlist rhel-6-x86_64.rpmlist \
 	redhat-el-5-i386.rpmlist redhat-el-5-x86_64.rpmlist \
+	redhat-el-6-i386.rpmlist redhat-el-6-x86_64.rpmlist \
 	centos-5-i386.rpmlist centos-5-x86_64.rpmlist \
 	centos-6-i386.rpmlist centos-6-x86_64.rpmlist \
 	scientific_linux-5-i386.rpmlist scientific_linux-5-x86_64.rpmlist \
