[oscar_wizard] Now use new apitest routines for step 8. Added dep for perl-Tk-TextANSIColor in oscar-base-lib (only rpm for now)
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10379 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: e1e5728eff3c592f73862d49f796d8c82d2220ad

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -119,6 +119,7 @@ Summary: Libraries for OSCAR clustering package.
 Requires: perl-XML-Simple
 Requires: perl-AppConfig
 Requires: perl-Net-IPv4Addr
+Requires: perl-Tk-TextANSIColor
 Requires: iproute
 Requires: wget
 Requires: %{name}-base == %{version}-%{release}
