[oscar/lib/OSCAR/Makfile] Missing Testing.pm file in FILE variable.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10380 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: bf22816fbc1f017711d39a78deb95dc4c14907b1

--- a/lib/OSCAR/Makefile
+++ b/lib/OSCAR/Makefile
@@ -16,7 +16,8 @@ FILES := AddNode.pm Help.pm Prereqs.pm Bootstrap.pm ImageMgt.pm \
          PackageSmart.pm VMConfigManager.pm Env.pm NodeMgt.pm \
          PartitionConfigManager.pm  WizardEnv.pm FileUtils.pm OCA.pm \
          PartitionMgt.pm GUI_MAC.pm SystemInfo.pm SystemServices.pm \
-         SystemServicesDefs.pm Defs.pm Startover.pm PrereqsDefs.pm
+         SystemServicesDefs.pm Defs.pm Startover.pm PrereqsDefs.pm \
+         Testing.pm
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
