[oscar/lib/OSCAR/Makefile] Add missing LoggerDefs.pm
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10405 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: a0a427b441db2c487ed71063172cb8944172ff58

--- a/lib/OSCAR/Makefile
+++ b/lib/OSCAR/Makefile
@@ -6,9 +6,9 @@ include $(TOPDIR)/Config.mk
 SUBDIRS := OCA
 
 FILES := AddNode.pm Help.pm Prereqs.pm Bootstrap.pm ImageMgt.pm \
-         OpkgDB.pm psm.pm Logger.pm Opkg.pm ClientMgt.pm LSBreleaseParser.pm \
-         PxegrubConfigManager.pm CLI_MAC.pm osm.pm pxegrub.pm \
-         CmpVersions.pm MAC.pm PackageBest.pm SISBuildSetup.pm \
+         OpkgDB.pm psm.pm Logger.pm LoggerDefs.pm Opkg.pm ClientMgt.pm
+         LSBreleaseParser.pm PxegrubConfigManager.pm CLI_MAC.pm osm.pm
+         pxegrub.pm CmpVersions.pm MAC.pm PackageBest.pm SISBuildSetup.pm \
          PackageInUn.pm ConfigFile.pm PackagePath.pm SwitcherAPI.pm \
          ConfigManager.pm msm.pm SystemSanity.pm Package.pm Tk.pm \
          Network.pm Utils.pm DelNode.pm \
