[oscar: build] Fixed Makefile so it doesn't moves the built packages. oscar-packager is responsible for moving the built packages to the correct destination. moverpms: and movedebs: rules have been created to keep old behaviour just in case.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10465 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: dab8433399bb0ba4e22f8994e1212567601d6702

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Package: oscar-bin
 Architecture: all
 Description: Binaries for OSCAR
  Set of binaries for OSCAR
-Depends: liboscar, libnetwork-ipv4addr-perl
+Depends: liboscar, libnetwork-ipv4addr-perl, systeminstaller-oscar (>= 2.4.12)
 
 Package: oscar-utils
 Architecture: all
@@ -53,6 +53,6 @@ Description: Transitional package for OSCAR (client side)
 
 Package: oscar-dev
 Architecture: all
-Depends: oscar-base, opkgc (>= 0.6.0), packman (>= 3.2.0)
+Depends: oscar-base, opkgc (>= 0.6.0), packman (>= 3.2.2)
 Description: Everything needed for OSCAR related developments
  Everything needed for OSCAR related developments.
