[sge: build.cfg] Set package as broken to avoid trying to build it (new oscar-packager)
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10506 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 4107f2041a44140dcebb1d246a8b0e2d6762f3cd

--- a/packages/sge/build.cfg
+++ b/packages/sge/build.cfg
@@ -1,28 +1,33 @@
 [sles:*:*]
+nobuild: package currently broken.
 requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
 requires: openmotif-devel ncurses-devel libgcj-devel xorg-x11-devel
 common: sge
 sge
 
 [suse:10*:*]
+nobuild: package currently broken.
 requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
 requires: openmotif-devel ncurses-devel libgcj-devel xorg-x11-libX11-devel xorg-x11-libXpm-devel
 common: sge
 sge
 
 [rhel:4:*]
+nobuild: package currently broken.
 requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
 requires: openmotif-devel ncurses-devel libgcj-devel xorg-x11-devel
 common: sge
 sge
 
 [rhel:5|6:*]
+nobuild: package currently broken.
 requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
 requires: openmotif-devel ncurses-devel libgcj-devel xorg-x11-libX11-devel xorg-x11-libXpm-devel
 common: sge
 sge
 
 [*:*:*]
+nobuild: package currently broken.
 requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
 requires: openmotif-devel ncurses-devel libgcj-devel libX11-devel libXpm-devel
 common: sge
