[oscar: packaging] scripts cleanup.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10516 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: ce84726b01f0aaaab548489620d57db5a0143d2c

--- a/rpm/Makefile
+++ b/rpm/Makefile
@@ -39,7 +39,7 @@ macros.oscar:
 
 oscar.list:
 	cat oscar.list.in | sed -e "s|##SERVER_URL##|http://svn.oscar.openclustergroup.org|g" \
-				-e "s|##REPO_PATH##|$$(../scripts/compute_repo_url repos)|g" > oscar.list
+				-e "s|##REPO_PATH##|$$(../dist/compute_repo_url repos)|g" > oscar.list
 
 oscar.repo:
 	cat oscar.repo.in | sed -e "s|##URL##|$$(../scripts/compute_repo_url http://svn.oscar.openclustergroup.org/repos)|g" \
