[oscar: packaging] Even more cleanup
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10518 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 7c4af5dbe81e7d22d674c8abe62ef0764043e02c

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -6,8 +6,8 @@ SCRIPTS := create_and_populate_basic_node_info \
 		get-oscar-version.sh install_prereq install_server \
 		integrate_image opd \
 		oscar_sanity_check \
-		ping_clients post_clients post_install post_rpm_install prepare_repos \
-		prep_oscar_repos set_node_nics set_oscar_interface \
+		ping_clients post_clients post_install post_rpm_install \
+		prep_oscar_repos set_node_nics \
 		ssh_install update_live_macs \
 		oscar-updater
 SUBDIRS := cli oscar-updater.d
