[oscar: testing] Moved complex scripts out of apitest scripts (*.apt) so they can be run standalone. this also avoid problem parsing the result files with XMLSimple if a print "----" is seen.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10519 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 9e29c4eb6c373b18a4ec11fe32b9c2708f12cc02

--- a/testing/wizard_tests/Makefile
+++ b/testing/wizard_tests/Makefile
@@ -1,7 +1,7 @@
 DESTDIR=
 INSTALLDIR=/usr/lib/oscar/testing/wizard_tests
 
-SUBDIRS := helpers
+SUBDIRS := helpers tests.d
 SCRIPTS := *.apt *.apb
 
 all:
