[oscar: testing] Reworked testing structure. Updated Testing.pm consequently
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10520 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 25e741d5519e3f3c4408d09452e96416aa793d60

--- a/testing/Makefile
+++ b/testing/Makefile
@@ -1,7 +1,7 @@
 DESTDIR=
 INSTALLDIR=/usr/lib/oscar/testing/
 
-SUBDIRS := unit_testing wizard_tests
+SUBDIRS := unit_testing helpers tests.d apitests.d
 SCRIPTS := run_unit_test testprint test_cluster ssh_user_tests
 
 all:
