[oscar: packaging] Add testing/data directory creation so it is owned by package when package is built.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10530 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 3c053424db9f10ff78e8aa3c1bf02bd7c5bd589e

--- a/testing/Makefile
+++ b/testing/Makefile
@@ -1,5 +1,5 @@
 DESTDIR=
-INSTALLDIR=/usr/lib/oscar/testing/
+INSTALLDIR=/usr/lib/oscar/testing
 
 SUBDIRS := unit_testing helpers tests.d apitests.d
 SCRIPTS := run_unit_test testprint test_cluster ssh_user_tests
@@ -9,6 +9,7 @@ all:
 
 install:
 	install -d -m 0755 $(DESTDIR)$(INSTALLDIR)
+	install -d -m 0755 $(DESTDIR)$(INSTALLDIR)/data
 	install    -m 0755 ${SCRIPTS} $(DESTDIR)$(INSTALLDIR)
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} install ) ; done
 
