[oscar: deb build] Fix bin/ directory not being packaged because debian build doesn't use make install..... time to rewrite deb packaging using .install files.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10534 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: c8b3749d7209c2fdccda7e0de44a398eb1724186

--- a/debian/rules
+++ b/debian/rules
@@ -124,6 +124,8 @@ install: build
 	cd  $(CURDIR)/scripts; make clean;
 	# Then we install the binaries
 	cd  $(CURDIR)/scripts; make install DESTDIR=$(CURDIR)/debian/oscar-bin
+	# Then we install the binaries
+	cd  $(CURDIR)/bin; make install DESTDIR=$(CURDIR)/debian/oscar-bin
 	# mv $(CURDIR)/install_cluster \
 	#	$(CURDIR)/debian/oscar-bin/usr/bin
 
