[oscar:scripts/system-sanity] Removed obsolete system-sanity. will be replaced by a call to apitests.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10546 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 35265cc05fd7fc36af3a6619ec57589b4cbd508e

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -2,8 +2,7 @@ DESTDIR=
 TOP_DIR = ..
 include $(TOP_DIR)/Config.mk
 
-SCRIPTS := oscar-config oscar_image_cleanup oscar_wizard repo-update setup_pxe system-sanity
-SUBDIRS := system-sanity.d
+SCRIPTS := oscar-config oscar_image_cleanup oscar_wizard repo-update setup_pxe
 
 doc:
 	install -d -m 0755 $(DESTDIR)$(MANDIR)/man1/
