[cconfig] Handle --zero/--nozero in update command.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10667 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 93f6ebf1b70cabddbec11737d144fa42bc5b9162

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -2,7 +2,7 @@ DESTDIR=
 TOP_DIR = ..
 include $(TOP_DIR)/Config.mk
 
-SCRIPTS := oscar-config oscar_image_cleanup oscar_wizard repo-update setup_pxe
+SCRIPTS := oscar-config oscar_image_cleanup oscar_wizard repo-update setup_pxe cconfig
 
 doc:
 	install -d -m 0755 $(DESTDIR)$(MANDIR)/man1/
