[OSCAR::Monitoring.pm] Add file to Makefile so it gets packaged.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10716 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 1da760d1db2dd686fd94e6ee37a3ef98451b8359

--- a/lib/OSCAR/Makefile
+++ b/lib/OSCAR/Makefile
@@ -17,7 +17,7 @@ FILES := AddNode.pm Help.pm Prereqs.pm Bootstrap.pm ImageMgt.pm \
          PartitionConfigManager.pm  WizardEnv.pm FileUtils.pm OCA.pm \
          PartitionMgt.pm GUI_MAC.pm SystemInfo.pm SystemServices.pm \
          SystemServicesDefs.pm Defs.pm Startover.pm PrereqsDefs.pm \
-         Testing.pm
+         Testing.pm MonitoringMgt.pm
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
