[OSCAR::Package::get_scripts_dir] Fixed opkgs_path get value. Also fixed oscar.conf templates.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10722 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f75331b8e5f3a5d9b3d20c6c226f7ce44efd25d5

--- a/share/etc/templates/oscar.conf
+++ b/share/etc/templates/oscar.conf
@@ -36,7 +36,7 @@ RAPT_PATH = /usr/share/oscar/prereqs/rapt
 YUME_PATH = /usr/share/oscar/prereqs/yume
 
 # Specify where OSCAR packages are located. This is only used by developers
-OPKGS_PATH = packages
+OPKGS_PATH = /usr/lib/oscar/packages
 
 # Specify where the flat file ODA configuration file are
 PATH_ODA_CONFIG_FILES = /etc/oscar/clusters
