[oscar-base.spec.in] Added disttag to the rpm release if available (standard).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10774 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 60be7d5794b2b9e3cb016c3779c4e43b7687030f

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -8,7 +8,7 @@
 Summary: 	OSCAR package
 Name: 		oscar
 Version: 	OSCARVERSION
-Release: 	1
+Release: 	1%{?dist}
 License: 	GPL
 URL: 		http://oscar.openclustergroup.org
 Group: 		Applications/System
