[oscar-base.spec.in] Add OSCAR:: lib files manuals to the devel package.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10842 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 4a669a270a5b30cf84fce093fe7ee681cbc78b1a

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -181,6 +181,7 @@ Everything needed for OSCAR related developments.
 %defattr(-,root,root)
 %{_sysconfdir}/rpm/macros.oscar
 %{_prefix}/lib/oscar/build/Config.mk
+%{_mandir}/man3/*
 
 %package -n oscar-release
 Summary: OSCAR release file and RPM repository configuration
