[oscar] Take into account the move from mysql to mariadb in some distros http://www.zdnet.com/oracle-who-fedora-and-opensuse-will-replace-mysql-with-mariadb-7000010640/ http://www.tecmint.com/install-mariadb-in-linux/
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10873 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: e590a65bde163ada1297164d8320aba3067899fb

--- a/share/prereqs/perl-Qt/prereq.cfg
+++ b/share/prereqs/perl-Qt/prereq.cfg
@@ -6,10 +6,7 @@ perl-Qt-compat-suse
 [fedora*|mandriva*|redhat*|centos*|scientific_linux*:*:*]
 perl-Qt
 
-[ubuntu:1204:*]
-libqtgui4-perl
-
-[ubuntu:1210:*]
+[ubuntu:1204|1210|1304|1310|1404:*]
 libqtgui4-perl
 
 [debian|ubuntu:*:*]
