--- a/share/package_sets/Default/Makefile
+++ b/share/package_sets/Default/Makefile
@@ -13,10 +13,14 @@ FILES :=	debian-4-i386.xml	debian-4-x86_64.xml \
 					fc-17-x86_64.xml \
 					fc-18-x86_64.xml \
 					fc-19-x86_64.xml \
+					fc-20-x86_64.xml \
 		rhel-4-i386.xml		rhel-4-x86_64.xml \
 		rhel-5-i386.xml		rhel-5-x86_64.xml \
 		rhel-6-i386.xml		rhel-6-x86_64.xml \
-					suse-10-x86_64.xml
+					rhel-7-x86_64.xml \
+					suse-10-x86_64.xml \
+					suse-11-x86_64.xml \
+					suse-12-x86_64.xml
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
