[oscar-base: packaging] Added apitest to lib requirements (required by OSCAR::Testing)
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10880 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 33a09ae8e71aab4c6d33cbae3428221a6c2ed6fd

--- a/debian/control
+++ b/debian/control
@@ -33,7 +33,7 @@ Package: liboscar
 Architecture: all
 Description: Libraries for OSCAR 
  Set of libraries for OSCAR
-Depends: libnetwork-ipv4addr-perl
+Depends: libnetwork-ipv4addr-perl, apitest
 
 Package: oscar-base-server
 Architecture: all
