[oscar:oscarsample] Add support for rhel7, centos7, sl-7 and fedora20.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10890 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 26215aa4e5aed400eda20ccaa042387acbdc62df

--- a/oscarsamples/Makefile
+++ b/oscarsamples/Makefile
@@ -9,12 +9,16 @@ FILES := debian-4-i386.rpmlist           debian-4-x86_64.rpmlist \
                                          fedora-17-x86_64.rpmlist \
                                          fedora-18-x86_64.rpmlist \
                                          fedora-19-x86_64.rpmlist \
+                                         fedora-20-x86_64.rpmlist \
          redhat-el-5-i386.rpmlist        redhat-el-5-x86_64.rpmlist \
          redhat-el-6-i386.rpmlist        redhat-el-6-x86_64.rpmlist \
+                                         redhat-el-7-x86_64.rpmlist \
          centos-5-i386.rpmlist           centos-5-x86_64.rpmlist \
          centos-6-i386.rpmlist           centos-6-x86_64.rpmlist \
+                                         centos-7-x86_64.rpmlist \
          scientific_linux-5-i386.rpmlist scientific_linux-5-x86_64.rpmlist \
          scientific_linux-6-i386.rpmlist scientific_linux-6-x86_64.rpmlist \
+                                         scientific_linux-7-x86_64.rpmlist \
          suse-10.0-i386.rpmlist          suse-10.0-x86_64.rpmlist \
                                          suse-10.2-x86_64.rpmlist \
                                          suse-10.3-x86_64.rpmlist \
