[oscar] Removed useless Net::IPv4Addr perl requirements and updated changelogs).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10908 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f3e6310502a4d83a4393861ad9a2c0d1394a85ff

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Package: oscar-bin
 Architecture: all
 Description: Binaries for OSCAR
  Set of binaries for OSCAR
-Depends: liboscar, libnetwork-ipv4addr-perl, systeminstaller-oscar (>= 2.4.12)
+Depends: liboscar, systeminstaller-oscar (>= 2.4.12)
 
 Package: oscar-utils
 Architecture: all
@@ -33,7 +33,7 @@ Package: liboscar
 Architecture: all
 Description: Libraries for OSCAR 
  Set of libraries for OSCAR
-Depends: libnetwork-ipv4addr-perl, apitest
+Depends: apitest
 
 Package: oscar-base-server
 Architecture: all
