[oscar] New oscarsample filesystem hierarchy. - Renamed rpmlist to pkglist - Add bootstrap config file for rhel-7-x86_64.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10931 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 0b15de15877f513abc3f1e345f4858f259b605fc

--- a/oscarsamples/diskfiles/Makefile
+++ b/oscarsamples/diskfiles/Makefile
@@ -1,17 +1,20 @@
-TARGETDIR=usr/share/oscar/oscarsamples
+TARGETDIR=usr/share/oscar/oscarsamples/diskfiles
 
-SUBDIRS := diskfiles img_bootstrap pkglists
-FILES := 
+SUBDIRS := 
+FILES := ide-pata.disk ide-sata.disk \
+         scsi.disk swraid1-scsi.disk scsi.ia64.disk scsi.ppc64-ps3.disk \
+         cciss.disk
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
 
 install:
 	install -d -m 0755 $(DESTDIR)/$(TARGETDIR)
+	install    -m 0755 ${FILES} $(DESTDIR)/$(TARGETDIR)
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} install ) ; done
 
 uninstall:
-	cd $(DESTDIR)/$(TARGETDIR)
+	cd $(DESTDIR)/$(TARGETDIR); rm -f ${FILES}
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} uninstall ) ; done
 
 clean:
