--- a/oscarsamples/img_bootstrap/Makefile
+++ b/oscarsamples/img_bootstrap/Makefile
@@ -1,17 +1,18 @@
-TARGETDIR=usr/share/oscar/oscarsamples
+TARGETDIR=usr/share/oscar/oscarsamples/img_bootstrap
 
-SUBDIRS := diskfiles img_bootstrap pkglists
-FILES := 
+SUBDIRS := 
+FILES := *.bootstrap *.cleanup
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
 
 install:
 	install -d -m 0755 $(DESTDIR)/$(TARGETDIR)
+	install    -m 0755 ${FILES} $(DESTDIR)/$(TARGETDIR)
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} install ) ; done
 
 uninstall:
-	cd $(DESTDIR)/$(TARGETDIR)
+	cd $(DESTDIR)/$(TARGETDIR); rm -f ${FILES}
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} uninstall ) ; done
 
 clean:
