--- a/bin/Makefile
+++ b/bin/Makefile
@@ -2,7 +2,7 @@ DESTDIR=
 TOP_DIR = ..
 include $(TOP_DIR)/Config.mk
 
-SCRIPTS := oscar-config oscar_image_cleanup oscar_wizard repo-update setup_pxe cconfig
+SCRIPTS := oscar-config oscar_image_cleanup oscar_wizard repo-update setup_pxe c3config
 
 doc:
 	install -d -m 0755 $(DESTDIR)$(MANDIR)/man1/
